--- a/package.json
+++ b/package.json
@@ -1,28 +1,46 @@
 {
-  "name": "vue",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "nuxt": "^1.4.1"
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "usage"
+        }
+      ]
+    ],
+    "plugins": [
+      "transform-es2015-modules-umd"
+    ]
   },
+  "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^8.6.2",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.11",
+    "@babel/core": "^7.1.2",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/preset-env": "^7.1.0",
+    "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
     "node-sass": "^4.9.0",
-    "postcss-loader": "^2.1.5",
-    "sanitize.css": "^5.0.0",
+    "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.0.1",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.4",
-    "webpack-spritesmith": "^0.4.1"
+    "webpack-spritesmith": "^0.5.3"
   },
   "browserslist": [
     "last 2 versions",
@@ -31,8 +49,7 @@
   ],
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack-dev-server",
-    "dev": "nuxt"
+    "watch": "webpack -w --mode development & webpack-dev-server"
   },
   "author": "",
   "license": "ISC"
